--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -4,7 +4,7 @@
 }
 
 .projects-heading {
-  font-size: 1.4rem;
+  font-size: 2rem;
 }
 
 .project-card-no-image {
@@ -16,4 +16,10 @@
   transition-duration: 0.5s;
   z-index: 1;
   cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .projects-heading {
+    font-size: 1.4rem;
+  }
 }
