--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -11,7 +11,7 @@ button:focus {
 }
 
 .contact-heading {
-  font-size: 1.4rem;
+  font-size: 2rem;
   margin-bottom: 50px;
 }
 
@@ -130,5 +130,8 @@ button:focus {
   }
   .address-custom {
     font-size: 18px;
+  }
+  .contact-heading {
+    font-size: 1.4rem;
   }
 }
