--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -11,11 +11,14 @@
   border-radius: 5px;
 }
 
-.project-card-no-image:hover {
-  transform: scale(1.1);
-  transition-duration: 0.5s;
-  z-index: 1;
-  cursor: pointer;
+.project-card-heading {
+  text-transform: uppercase;
+}
+
+.project-creator-circle {
+  width: 70px;
+  height: auto;
+  margin: 0 10px;
 }
 
 @media (max-width: 768px) {
