--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -25,6 +25,10 @@
   text-align: left;
 }
 
+.bold {
+  font-weight: bold !important;
+}
+
 @media (max-width: 768px) {
   .custom-period {
     text-align: left;
