--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -4,3 +4,7 @@ body {
   scroll-behavior: smooth !important;
 }
 
+@font-face {
+  font-family: 'Consolas';
+  src: local('Consolas'), url(../fonts/consolas.ttf) format('truetype');
+}
